--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -51,7 +51,6 @@ a {
 
 .nav-menu {
     display: flex;
-    /*justify-content: space-between;*/
     align-items: flex-start;
 }
 
@@ -80,15 +79,10 @@ a {
 }
 
 .nav-link:hover {
-    color: #000;
+    color: #000; /*the color you want*/
 }
-
 .nav-menu .bx{
     display: none;
-}
-
-.bx-menu{
-    font-size: 2rem;
 }
 
 @media only screen and (max-width: 768px) {
