--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -35,6 +35,10 @@ a {
     box-shadow: 0 2px 4px #8dd6fd;
 }
 
+.navbar ul{
+    padding-left: 10%;
+}
+
 .hamburger {
     display: none;
 }
@@ -95,7 +99,7 @@ a {
     .nav-menu {
         position: fixed;
         left: -100%;
-        top: 3rem;
+        top: 55px;
         flex-direction: column;
         background-color: #8acaef;
         width: 70%;
@@ -104,6 +108,10 @@ a {
         text-align: center;
         transition: 0.3s;
         box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    }
+
+    .nav-item {
+        margin-left: 0;
     }
 
     .nav-menu .bx{
@@ -116,7 +124,6 @@ a {
     }
 
     .nav-item {
-        margin: 0 70px;
         padding-top: 30px;
         font-weight: bold;
         font-size: 1rem;
@@ -125,6 +132,26 @@ a {
     .hamburger {
         display: block;
         cursor: pointer;
+    }
+
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
+
+    .change .bar2 {opacity: 0;}
+
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
     }
 }
 
